.provarCaches/00D5h000009Q6XQEA0/objects/provar__API_Request__c.object
<CustomObject>
    <fields>
        <fullName>provar__Action__c</fullName>
        <label>Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__API_Request_Actions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__HTTP_Method__c</fullName>
        <label>HTTP Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__HTTP_Request_Methods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Headers__c</fullName>
        <label>Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Params__c</fullName>
        <label>Params</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Remote_Address__c</fullName>
        <label>Remote Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Job_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>API Request</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Action__c</columns>
        <columns>provar__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APIR-{000000}</displayFormat>
        <label>API Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>